--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">  
     <title>MY TO-DO LIST</title>
     <h1 style="color:aquamarine"><center><strong>TO-DO LIST</strong></center></h1>
-    <body background="C:\Users\Sravy\OneDrive\Desktop\Final task\MY BACKGROUND.jpg">
+    <body background="https://github.com/LakshmiSravya08/To_Do_Task/blob/master/MY%20BACKGROUND.jpg">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
